New components as well as holon pattern fix